# ai-assistant-algorithms

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  webhook_url.txt
.github/workflows/: deploy-telegram-bot.yml
deployment/: build.sh  deploy.sh
deployment/lambda/: README.md  deploy.sh  handler.py  requirements.txt  setup_apigetaway.py  webhook_url.txt
deployment/lambda/algorithm_bot/: handler.py  requirements.txt
deployment/lambda/config/: lambda_config.json
deployment/lambda/scripts/: create_api_gateway.py  create_lambda_function.sh  create_lambda_role.sh  deploy_docker.sh  deployment_test.sh  set_telegram_webhook.py  setup_apigetaway.py  update_lambda_function.sh
deployment/lambda/telegram_bot/: lambda_function.py  lambda_function_1.py  requirements.txt
deployment/terraform/: backend.tf  terraform.tfvars
scripts/: run_algorithms_bot.py  run_telegram_bot.py  run_welldone_telegram_bot.py
scripts/table/: create_table.py  table_schema.json
src/ai-assistant/core/: embeddings.py  llm_service.py  main.py  rag_chain.py
src/ai_assistant/algorithms/: bot.py
src/ai_assistant/bots/: base_bot.py
src/ai_assistant/bots/algorithms/: bot.py
src/ai_assistant/bots/base/: base_bot.py  bot_factory.py  bot_registry.py
src/ai_assistant/bots/telegram/: base_telegram_bot.py  (+2 more)
src/ai_assistant/cli/: main.py  main_tmp.py  welldone_main.py
src/ai_assistant/core/: __init__.py  config.py  document_loader.py  embeddings.py  llm_service.py  rag_chain.py
src/ai_assistant/telegram/: algorithms_bot.py
(+15 files in other folders)
